# eval-assist

./: .commitlintrc.json  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  LOCAL_DEV_GUIDE.MD  MAINTAINERS.md  README.md  SYSTEM_CONFIGURATION.md  ci-docker_build.sh  ci-oc-refresh.sh  custom_models.json  package-lock.json  package.json
backend/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  README.md  ci-docker_build.sh  ci-oc-refresh.sh  custom_models_example.json  db_client.py  docker-build.sh  eval_template.prompt  evaluation.py  main.py  postgres.yml  pyproject.toml  requirements.txt  (+6 more)
backend/src/synthetic_example_generation/_archive/machine-labeler/: .gitignore  pyproject.toml
backend/src/synthetic_example_generation/_archive/machine-labeler/examples/: README.md  example_contextual-privacy.py  example_grammatical-acceptability.py  example_safety.py
backend/src/synthetic_example_generation/_archive/machine-labeler/src/machine_labeler/: __init__.py
backend/src/synthetic_example_generation/_archive/machine-labeler/src/machine_labeler/model_access/: model.py
backend/src/synthetic_example_generation/_archive/machine-labeler/src/machine_labeler/model_access/services/: hf.py  vllm.py
backend/src/synthetic_example_generation/_archive/machine-labeler/src/machine_labeler/utils/: config.py  data_utils.py  labeling_utils.py
backend/src/synthetic_example_generation/_archive/machine-labeler/tmp/: ibm_rits_model.py  vllm_model.py
(+624 files in other folders)
